# xts_hats

./: BUILD.gn  OAT.xml  README.en.md  README.md  build.gni  build.py  build.sh  bundle.json  check_hvigor.py  ci_uncompile_suite.json  test_packages.gni  test_targets.gni
distributedhardware/distributedcameratest/: BUILD.gn  Test.json  dcameraprovidercase.cpp  dcameraprovidercase.h  dcameratest.h
hdf/audio/idl/: BUILD.gn
hdf/bluetooth/hdiService/: BUILD.gn  Test.json  bluetooth_hci.h  bluetooth_hci_callback_impl.cpp  bluetooth_hci_callback_impl.h  bluetooth_hci_services_test.cpp  wifi_driver_client.h
hdf/camera/cameraBenchmarkTest/: BUILD.gn  Test.json  hdf_camera_benchmark_test.cpp
hdf/camera/cameraMg/: BUILD.gn  Test.json
hdf/codec/hdi_adapter/: BUILD.gn  Test.json  codec_hdi_adapter_test.cpp
hdf/codec/hdi_omx/: BUILD.gn  Test.json  codec_hdi_manager_test.cpp  codec_hdi_manger_test.cpp  codec_hdi_omx_test.cpp
hdf/codec/hdi_omx_additional/: BUILD.gn  Test.json  codec_hdi_manager_test.cpp
hdf/display/: BUILD.gn  Test.json
hdf/display/buffer/: BUILD.gn  Test.json  display_buffer_ut.cpp
hdf/display/common/: display_test.h  display_test_utils.cpp  display_test_utils.h
hdf/display/composer/: BUILD.gn
hdf/display/device/: BUILD.gn  Test.json  hdi_composition_check.cpp  hdi_composition_check.h  hdi_device_test.cpp  hdi_device_test.h  hdi_test_device.cpp  hdi_test_device.h  hdi_test_device_common.h  hdi_test_display.cpp  hdi_test_display.h  hdi_test_layer.cpp  hdi_test_layer.h  hdi_test_render_utils.cpp  hdi_test_render_utils.h
hdf/display/gralloc/: BUILD.gn  GrallocAdaptation.cpp  GrallocAllocTest.cpp  GrallocAllocTest.h  Test.json
hdf/external_device_manager/bus_extension_usb/: BUILD.gn  Test.json
hdf/external_device_manager/ddk_base_test/: BUILD.gn  Test.json  ddk_base_test.cpp
hdf/external_device_manager/ddk_permission_test/: BUILD.gn  Test.json  ddk_permission_test.cpp
hdf/external_device_manager/device_manager_test/: BUILD.gn  Test.json  device_manager_test.cpp
hdf/input/: BUILD.gn
hdf/input/PassthroughBenchmarkTest/: BUILD.gn  Test.json  hdf_input_benchmark_test.cpp
hdf/input/common/: hdi_input_test.cpp  hdi_input_test.h
hdf/input/hdi_input/: BUILD.gn
hdf/input/hdi_passthrough/: BUILD.gn  Test.json  hdf_input_hdi_test.cpp
hdf/input/hdi_passthrough_additional/: BUILD.gn  Test.json  hdf_input_hdi_test.cpp  input_callback_impl.cpp  input_callback_impl.h
hdf/input/inputBenchmarkTest/: BUILD.gn  Test.json  hdf_input_benchmark_test.cpp
hdf/usb/: BUILD.gn  nBUILD.gn
hdf/usb/UsbSubscriberTest/: UsbSubscriberTest.cpp  UsbSubscriberTest.h
hdf/usb/accessoryTest/: BUILD.gn  Test.json
hdf/usb/autoFunctionTest/: BUILD.gn  Test.json
hdf/usb/deviceStatusTest/: BUILD.gn
hdf/usb/deviceTest/: BUILD.gn
hdf/usb/deviceTest_additional/: BUILD.gn
hdf/usb/functionTest/: BUILD.gn
hdf/usb/functionTest_additional/: BUILD.gn  Test.json
hdf/usb/manageInterfaceTest/: BUILD.gn
hdf/usb/mtpTest/: BUILD.gn
hdf/usb/mtpTest_additional/: BUILD.gn  Test.json
hdf/usb/requestTest/: BUILD.gn
hdf/usb/requestTest_additional/: BUILD.gn  Test.json
hdf/usb/serialTest/: BUILD.gn
hdf/usb/serialsTest/: BUILD.gn  Test.json
hdf/usb/transferTest/: BUILD.gn
hdf/usb/transferTest_additional/: BUILD.gn  Test.json
hdf/usb/usbdBenchmarkTest/: BUILD.gn  Test.json
kernel/: BUILD.gn
kernel/accesstokenid/: BUILD.gn
kernel/account_manager/: BUILD.gn  Test.json  multi_account_manager_test.cpp
kernel/accountmanager/: BUILD.gn  Test.json  account_manager_test.cpp
kernel/cam/: BUILD.gn  CmaTest.cpp  Test.json
kernel/cma/: BUILD.gn  CmaTest.cpp  Test.json
kernel/dmabuffer/: BUILD.gn  Test.json  dmabuf_alloc.cpp
kernel/freelist/: BUILD.gn
kernel/freelist/encode_pointer/: BUILD.gn  Malloc_encode_pointer.cpp  Test.json
kernel/freelist/free_performance/: BUILD.gn  Malloc_free_performance.cpp  Test.json
kernel/freelist/malloc_pressure/: BUILD.gn  Malloc_pressure.cpp  Test.json
kernel/freelist/modify_pointer/: BUILD.gn  Malloc_modify_pointer.cpp  Test.json
kernel/freelist/safe_unlink/: BUILD.gn  Malloc_safe_unlink.cpp  Test.json
kernel/libmeminfoPc/: BUILD.gn  Test.json  meminfo_test.cpp
kernel/madvise/: BUILD.gn  MadviseApiTest.cpp  Test.json
kernel/memtracker/: BUILD.gn  MemTrackerTest.cpp  Test.json
kernel/mmap/: BUILD.gn  MmapApiTest.cpp  Test.json
kernel/mmap_v/: BUILD.gn  MmapVApiTest.cpp  Test.json
kernel/posix_interface/interface_gn/: BUILD.gn
kernel/prctl/: BUILD.gn  PrctlApiTest.cpp  Test.json
kernel/purgeableMem/: BUILD.gn  Test.json  purgeable_cpp_test.cpp
kernel/rtginterface/: BUILD.gn  Test.json  rtg_interface_test.cpp
kernel/syscall_ipc/: BUILD.gn
kernel/syscall_ipc/msg_handle/: BUILD.gn  MsgHandleApiTest.cpp  Test.json
kernel/syscall_ipc/msgctl/: BUILD.gn  MsgctlApiTest.cpp  Test.json
kernel/syscall_ipc/msgget/: BUILD.gn  MsggetApiTest.cpp  Test.json
kernel/syscall_ipc/semctl/: BUILD.gn  SemctlApiTest.cpp  Test.json
kernel/syscall_ipc/semget/: BUILD.gn  SemgetApiTest.cpp  Test.json
kernel/syscall_ipc/semop/: BUILD.gn  SemopApiTest.cpp  Test.json
kernel/syscall_ipc/shmat/: BUILD.gn  ShmatApiTest.cpp  Test.json
kernel/syscall_ipc/shmctl/: BUILD.gn  ShmctlApiTest.cpp  Test.json
kernel/syscall_ipc/shmget/: BUILD.gn  ShmgetApiTest.cpp  Test.json
kernel/syscalls/: BUILD.gn
kernel/syscalls/async/: BUILD.gn
kernel/syscalls/drive/: BUILD.gn
kernel/syscalls/fileio/: BUILD.gn
kernel/syscalls/mem/: BUILD.gn
kernel/syscalls/net/: BUILD.gn
kernel/syscalls/ns/: BUILD.gn
kernel/syscalls/process/: BUILD.gn
kernel/syscalls/resource/: BUILD.gn
kernel/syscalls/schedule/: BUILD.gn
kernel/syscalls/security/: BUILD.gn
kernel/syscalls/signal/: BUILD.gn
kernel/syscalls/syscall_rich/: BUILD.gn
kernel/syscalls/system/: BUILD.gn
kernel/syscalls/timer/: BUILD.gn
startup/partitionslot/: BUILD.gn  Test.json
useriam/fingerprintauth/: BUILD.gn  Test.json
useriam/pinauth/: BUILD.gn  Test.json
useriam/userauth/: BUILD.gn  Test.json
useriam/userauth_additional/: BUILD.gn  Test.json
(+1579 files in other folders)
