# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

all_test_targets = [
  "${HATS_ROOT}/distributedhardware:distributedhardware",
  "${HATS_ROOT}/hdf:hatshdftest",
  "${HATS_ROOT}/kernel:kernel",
  "${HATS_ROOT}/powermgr:powermgr",
  "${HATS_ROOT}/useriam:useriam",
  "${HATS_ROOT}/telephony:telephony",
  "${HATS_ROOT}/startup:startup",
  "${HATS_ROOT}/ai:hatsaitest",
]

all_test_targets_ivi = [
  # add hats for ivi here
  # "${HATS_ROOT}/multimedia:multimedia_ivi",
]

all_test_targets_intellitv = [
  # add hats for intellitv here
  #"${HATS_ROOT}/multimedia:multimedia_intellitv",
]

all_test_targets_wearable = [
  # add hats for wearable here
  #"${HATS_ROOT}/multimedia:multimedia_wearable",
]
