# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//test/xts/hats/build.gni")
import(
    "open_posix_testsuite/conformance/interfaces_gn/posix_interface_config.gni")

group("kernel") {
  testonly = true
  if (is_standard_system) {
    if (hats_rich == true) {
      deps = [
        "accesstokenid:HatsAccesstokenidTest",
        "dmabuffer:HatsDmaBufferTest",
        "libmeminfoPc:HatsMemInfoTest",
        "madvise:HatsMadviseTest",
        "memtracker:HatsMemoryTrackerTest",
        "mmap:HatsMmapTest",
        "mmap_v:HatsMmapVTest",
        "open_posix_testsuite/conformance/interfaces_gn:${posix_interface_module}",
        "posix_interface/interface_gn:HatsPosixInterfaceTest",
        "prctl:HatsPrctlTest",
        "purgeableMem:HatsPurgeableTest",
        "rtginterface:HatsRtgInterfaceTest",
        "syscalls:HatsSyscallTest",
      ]
    } else {
      deps = [
        "accesstokenid:HatsAccesstokenidTest",
        "dmabuffer:HatsDmaBufferTest",
        "freelist:HatsFreeListTest",
        "libmeminfoPc:HatsMemInfoTest",
        "madvise:HatsMadviseTest",
        "memtracker:HatsMemoryTrackerTest",
        "mmap:HatsMmapTest",
        "open_posix_testsuite/conformance/interfaces_gn:${posix_interface_module}",
        "posix_interface/interface_gn:HatsPosixInterfaceTest",
        "prctl:HatsPrctlTest",
        "purgeableMem:HatsPurgeableTest",
        "rtginterface:HatsRtgInterfaceTest",
        "syscalls:HatsSyscallTest",
      ]
    }
  }
}
