# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("//build/ohos_var.gni")
import("$base_root/test/xts/hats/build.gni")
import("$base_root/test/xts/tools/build/suite.gni")

group("HatsHdfInputTest") {
  testonly = true
  if (xts_hats_features_rich == true) {
    deps = [ "hdi_input:HatsHdfInputTest" ]
  } else {
    deps = [
      "hdi_input:HatsHdfInputTest",
      "hdi_passthrough:HatsHdfInputPassthroughTest",

      #"inputBenchmarkTest:HatsHdfInputbenchmarkTest",
      #"PassthroughBenchmarkTest:HatsHdfInputPassthroughBenchmarkTest",
    ]
  }
}
