# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//build/test.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//test/xts/hats/build.gni")
import("//test/xts/tools/build/suite.gni")

group("HatsHdfUsbTest") {
  testonly = true
  if (hats_rich == false) {
    deps = [
      "autoFunctionTest:HatsHdfUsbAutoFunctionTest",

      # "deviceStatusTest:HatsHdfUsbDeviceStatusTest",
      # "deviceTest:HatsHdfUsbDeviceTest",
      # "deviceTest_additional:HatsHdfUsbDeviceAdditionalTest",
      # "functionTest:HatsHdfUsbFunctionTest",
      # "functionTest_additional:HatsHdfUsbFunctionAdditionalTest",
      # "manageInterfaceTest:HatsHdfUsbManageInterfaceTest",
      # "mtpTest:HatsHdfUsbFnMtpTest",
      # "mtpTest_additional:HatsHdfUsbFnMtpAdditionalTest",
      # "requestTest:HatsHdfUsbRequestTest",
      # "requestTest_additional:requestAdditional_test",
      # "transferTest:HatsHdfUsbTransferTest",
      # "transferTest_additional:transferAdditional_test",

      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkDeviceTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkFunctionTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkManagerInterfaceTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkRequestTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkTransferTest",
    ]
  } else {
    deps = [
      "accessoryTest:HatsHdfUsbAccessoryTest",
      "autoFunctionTest:HatsHdfUsbAutoFunctionTest",

      # "deviceStatusTest:HatsHdfUsbDeviceStatusTest",
      # "deviceTest:HatsHdfUsbDeviceTest",
      # "deviceTest_additional:HatsHdfUsbDeviceAdditionalTest",
      # "functionTest:HatsHdfUsbFunctionTest",
      # "functionTest_additional:HatsHdfUsbFunctionAdditionalTest",
      # "manageInterfaceTest:HatsHdfUsbManageInterfaceTest",
      # "requestTest:HatsHdfUsbRequestTest",
      # "requestTest_additional:requestAdditional_test",
      # "transferTest:HatsHdfUsbTransferTest",
      # "transferTest_additional:transferAdditional_test",

      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkDeviceTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkFunctionTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkManagerInterfaceTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkRequestTest",
      # "usbdBenchmarkTest:HatsHdfUsbBenchmarkTransferTest",
    ]
  }
}
