# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

module_output_path = "hats/accountmanager"
memmgr_path = "../../../../../foundation/resourceschedule/memmgr"
memmgr_service = "${memmgr_path}/services/memmgrservice"
memmgr_service_configs = [ "${memmgr_service}:memory_memmgr_config" ]

memmgr_external_deps = [
  "c_utils:utils",
  "eventhandler:libeventhandler",
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
  "memmgr:memmgrclient",
  "os_account:os_account_innerkits",
]

ohos_moduletest_suite("HatsAccountManager") {
  module_out_path = module_output_path
  configs = memmgr_service_configs
  sources = [ "./account_manager_test.cpp" ]
  deps = [
    "../../../../../base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "../../../../../foundation/resourceschedule/memmgr/services/memmgrservice:memmgrservice",
    "../../../../../third_party/googletest:gtest_main",
  ]
  external_deps = memmgr_external_deps
  include_dirs = [
    "../../../../../test/xts/tools/hctest/include",
    "../../../../../utils/",
    "../../../../../foundation/resourceschedule/memmgr/test/unittest/phone/utils.h",
  ]
}
