# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")
module_output_path = "hats/memtracker"

memorytracker_external_deps = [
  "drivers_interface_memorytracker:libmemorytracker_proxy_1.0",
  "ipc:ipc_core",
]

ohos_moduletest_suite("HatsMemoryTrackerTest") {
  module_out_path = module_output_path
  sources = [ "./MemTrackerTest.cpp" ]

  deps = [ "//third_party/googletest:gtest_main" ]
  external_deps = [ "c_utils:utils" ]
  if (is_standard_system) {
    external_deps += memorytracker_external_deps
  }
  include_dirs = [
    "//test/xts/tools/hctest/include",
    "//utils/",
  ]
  cflags = [ "-Wno-error" ]
  subsystem_name = "kernel"
}
