# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../tools/build/suite.gni")

module_output_path = "hats/rtginterface"

base_root = "../../../../../"

frame_aware_sched_public_deps =
    [ "$base_root/third_party/googletest:gtest_main" ]

ohos_moduletest_suite("HatsRtgInterfaceTest") {
  module_out_path = module_output_path

  sources = [ "./rtg_interface_test.cpp" ]

  include_dirs = [
    "$base_root/foundation/resourceschedule/frame_aware_sched/common/include",
  ]

  if (is_standard_system) {
    public_deps = frame_aware_sched_public_deps
  }

  external_deps = [
    "c_utils:utils",
    "frame_aware_sched:rtg_interface",
  ]

  cflags = [ "-Wno-error" ]
  part_name = "hats"
  subsystem_name = "kernel"
}
