# Copyright (C) 2024 HiHope Open Source Organization.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//test/xts/hats/build.gni")

group("HatsSyscallTest") {
  testonly = true
  deps = [
    "async:HatsAsyncTest",
    "drive:HatsDriveTest",
    "fileio:HatsFileIoTest",
    "mem:HatsMemTest",
    "net:HatsNetTest",
    "ns:HatsNsTest",
    "process:HatsProcessTest",
    "resource:HatsResourceTest",
    "schedule:HatsScheduleTest",
    "security:HatsSecurityTest",
    "signal:HatsSignalTest",
    "system:HatsSystemTest",
    "timer:HatsTimerTest",
    "user:HatsUserTest",
  ]
  if (hats_rich == true) {
    deps += [
      "syscall_rich: HatsRichTest",
    ]
  }
}
