# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("$base_root/build/config/features.gni")
import("$base_root/build/ohos_var.gni")
import("$base_root/build/test.gni")
import("$base_root/drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("$base_root/test/xts/tools/build/suite.gni")

ohos_moduletest_suite("HatsUserIamFingerprintAuthTest") {
  module_out_path = "hdf/fingerprint_auth"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "./include",
    "../common/include",
    "$base_root/drivers/peripheral/fingerprint_auth/hdi_service/include",
    "$base_root/drivers/peripheral/fingerprint_auth/hdi_service/src",
    "$base_root/base/useriam/user_auth_framework/common",
    "$base_root/base/useriam/user_auth_framework/common/logs",
    "$base_root/third_party/googletest/googletest/include/gtest",
    "$base_root/commonlibrary/c_utils/base/include",
  ]

  sources = [
    "./src/fingerprint_auth_hdi.cpp",
    "./src/fingerprint_type_test.cpp",
  ]

  deps = [
    "$base_root/base/useriam/user_auth_framework/common:iam_test",
    "$base_root/drivers/interface/fingerprint_auth/v1_2:libfingerprint_auth_stub_1.2",
    "$base_root/drivers/peripheral/fingerprint_auth/hdi_service:libfingerprint_auth_interface_service_1.2",
    "$base_root/third_party/googletest:gtest_main",
    "../common:useriam_test_common",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_fingerprint_auth:fingerprint_auth_idl_headers_1.2",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}
